# client-server-rs

./: Cargo.toml
src/: client.rs  lib.rs  listener.rs  networking.rs  server.rs
src/listener/: movement.rs  teleport.rs
src/networking/: packets.rs
