[package]
name = "client-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.70"
getset = "0.1.2"
lazy_static = "1.4.0"
phf = { version = "0.11.0", features = ["macros"] }
rand = "0.8.5"
uuid = { version = "1.3.1", features = ["v4"] }
